--- a/app/Resources/views/base_admin.html.twig
+++ b/app/Resources/views/base_admin.html.twig
@@ -30,7 +30,7 @@
                 $("#searchUser").focus(function() {
                     $(this).autocomplete('search', $(this).val())
                 });
-                
+
                 $( "#searchUser" ).autocomplete({
                     source: function( request, response ){
                         $.ajax({
@@ -38,6 +38,7 @@
                             data: {
                                 string: request.term
                             },
+                            minLength: 2,
                             beforeSend: function(xhr) {
                                 // $("#atix_caissebundle_facture_filtre_fkSoc").addClass("loadinggif-for-input");
                             },
