--- a/app/Resources/views/Ath/Admin/standard_layout.html.twig
+++ b/app/Resources/views/Ath/Admin/standard_layout.html.twig
@@ -73,6 +73,7 @@ file that was distributed with this source code.
                             data: {
                                 string: request.term
                             },
+                            minLength: 2,
                             beforeSend: function(xhr) {
                                 // $("#atix_caissebundle_facture_filtre_fkSoc").addClass("loadinggif-for-input");
                             },
