--- a/web/sass/front/theme/style.scss
+++ b/web/sass/front/theme/style.scss
@@ -8390,17 +8390,31 @@ h1.title-error {
   margin-bottom: 25px;
   border-bottom: 4px solid #b3de1d;
 }
+
 .fond_404 {
+  background: url('../../../images/fond_404.png') no-repeat center;
+}
+.fond_403 {
+  background: url('../../../images/fond_403.png') no-repeat center;
+}
+.fond_500 {
+  background: url('../../../images/fond_403.png') no-repeat center;
+}
+
+.fond_404,
+.fond_403,
+.fond_500 {
   position: absolute;
   z-index: 1;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background: url('../../../images/fond_404.png') no-repeat center;
   background-size: cover;
 }
-.fond_404 .text_404 {
+.fond_404 .text_404,
+.fond_403 .text_403,
+.fond_500 .text_500 {
   background-color: rgba(255, 255, 255, 0.6);
   padding: 30px 15px;
   width: 90%;
@@ -8408,6 +8422,8 @@ h1.title-error {
   margin: auto;
   margin-top: 50vh;
 }
-.fond_404 .text_404 a {
+.fond_404 .text_404 a,
+.fond_403 .text_403 a,
+.fond_500 .text_500 a {
   color: #333;
 }
