--- a/app/Resources/AthUserBundle/views/Profile/show_content.html.twig
+++ b/app/Resources/AthUserBundle/views/Profile/show_content.html.twig
@@ -120,7 +120,12 @@
               {% for oneFollower in followers %}
                     <div class="col-xs-3 col-sm-1 col-md-4 friend-item">
                       <a href="{{ path('ath_user_show_profile',{'slug': oneFollower.slug }) }}">
+                        {% if oneFollower.statutJuridiqueId == 1 and oneFollower.photoId == null %}
+                        <img class="" src="/{{ oneFollower.webPath }}" alt="{{ oneFollower }}" title="{{ oneFollower }}" width="70" height="70" />
+                        {% else %}
+                        
                         <img class="" src="{{ oneFollower.webPath | imagine_filter('mini') }}" alt="{{ oneFollower }}" title="{{ oneFollower }}" />
+                        {% endif %}
                         <p style="color: black">{{ oneFollower }}:</p>
                       </a>
                     </div>
