--- a/app/Resources/views/Ath/User/followers.html.twig
+++ b/app/Resources/views/Ath/User/followers.html.twig
@@ -15,7 +15,7 @@
 
                     <div class="col-md-3">
                       <a href="{{ path('ath_user_show_profile',{'slug': oneFollower.slug }) }}">
-                        <img class="" src="{{ oneFollower.webPath | imagine_filter('small') }}" alt="{{ oneFollower }}" title="{{ oneFollower }}" />
+                        <img src="{{ oneFollower.webPath | imagine_filter('small') }}" alt="{{ oneFollower }}" title="{{ oneFollower }}" />
                       <p style="color: black">{{ oneFollower }}:</p>
                       </a>
 
@@ -69,9 +69,11 @@
   $(document).ready(function() {
       var load = 0;
       var end = false;
+      var ok = true;
 
       $(window).scroll(function(){
-        if ($(window).scrollTop() == $(document).height() - $(window).height()) {
+        if ($(window).scrollTop() >= $(document).height() - $(window).height() - 3000 && ok == true) {
+          ok = false;
           if (end == false){
             load++;
             $.ajax({
@@ -80,16 +82,17 @@
               dataType: 'html',
               data: {load: load},
               beforeSend: function(xhr) {
-                $("#my-loader").show();
+                // $("#my-loader").show();
               }
             })
             .done(function(data) {
-              $("#my-loader").hide();
+              ok = true;
+
+              // $("#my-loader").hide();
               if (data) {
                 $('.user_friends').append(data);
               }
               else{
-
                 if (end == false){
                 $('.end').append('<h3 class="title-line"> {{ "no.results" | trans({}, "home") }} </h3>');
                 }
@@ -98,8 +101,8 @@
               }
             })
             .fail(function() {
-              $("#my-loader").hide();
-
+              ok = true;
+              // $("#my-loader").hide();
               console.log("error");
             })
           }
