--- a/app/Resources/views/Ath/Produit/index.html.twig
+++ b/app/Resources/views/Ath/Produit/index.html.twig
@@ -43,6 +43,7 @@
       </div>
     </div>
         {% endfor %}
+        {% include '@ath_views/Ath/Produit/pagination.html.twig' %}
 </div>
                 
 
