--- a/app/Resources/views/top_nav.html.twig
+++ b/app/Resources/views/top_nav.html.twig
@@ -41,7 +41,7 @@
         </form>
 
         <ul class="nav navbar-nav">
-          <li><a href="#"><i class="fa fa-eur" aria-hidden="true"></i> Comparateur de prix</a></li>
+          <li><a href="{{ path('ath_list_produit') }}"><i class="fa fa-eur" aria-hidden="true"></i> Comparateur de prix</a></li>
         </ul>
       {% endif %}
 
