--- a/app/Resources/views/base_error.html.twig
+++ b/app/Resources/views/base_error.html.twig
@@ -42,6 +42,48 @@
     </main>
 
   </div>
+  
+  {% block javascripts %}
+    
+            <script type="text/javascript">
+            $(document).ready(function($) {
+      
+              $("#searchUser").focus(function() {
+                $(this).autocomplete('search', $(this).val())
+              });
+          
+                        $( "#searchUser" ).autocomplete({
+                            source: function( request, response ){
+                                $.ajax({
+                                    url: "{{path('ath_main_search_user')}}",
+                                    data: {
+                                        string: request.term
+                                    },
+                                    beforeSend: function(xhr) {
+                                        // $("#atix_caissebundle_facture_filtre_fkSoc").addClass("loadinggif-for-input");
+                                    },
+                                    success: function( data ) {
+                                        // $("#atix_caissebundle_facture_filtre_fkSoc").removeClass("loadinggif-for-input");
+                                        // console.log(data);
+                                        // response( data.append(data.img) );
+                                        response(data);
 
+                                    }
+                                });
+                            },
+                            create: function () {
+                                $(this).data('ui-autocomplete')._renderItem = function (ul, item) {
+                                    var url = '{{ path("ath_user_show_profile", {"slug": "toto"}) }}';
+                                    url = url.replace("toto", item.slug);
+
+                                    return $('<li>')
+                                        .append('<a href='+url+'>' + item.img + ' ' + item.value + '<br>'+ '('+ item.ville+')'+ '</a>')
+                                        .appendTo(ul);
+                                };
+                            }                    
+                        });
+                    });
+            </script>
+        {% endblock %}
 </body>
 </html>
