--- a/web/sass/front/partials/sub.scss
+++ b/web/sass/front/partials/sub.scss
@@ -1,4 +1,5 @@
 .fos_user_registration_register, .request_form{
+  margin-bottom: 20px;
   h3{
     font-weight: bold;
     text-transform: uppercase;
