--- a/app/Resources/views/Ath/Main/index.html.twig
+++ b/app/Resources/views/Ath/Main/index.html.twig
@@ -49,7 +49,7 @@
                       </a>
                       {% if oneEvent.description | length > 20 %}
                         <p class="read-more" data-target="{{ oneEvent.siteWeb }}" data-confirm="{{ oneEvent.description }}" data-id="{{ oneEvent.libelle }}"><i>{{ oneEvent.description | slice(0,20) }}...</i></p>
-					  {% else %}
+					           {% else %}
                         <p><i>{{ oneEvent.description }}</i></p>
                       {% endif %}
                     </div>
@@ -66,20 +66,21 @@
             <h3 class="edited" id="edited_ltstre">Journal:</h3>
             <div class="row">
               <div class="col-md-12">
-                <form class="" action="" method="Post">
-                    <div class="well"> 
-                       <form class="form-horizontal" role="form">
-                          <h4>{{ "new_post" | trans({}, 'home') }}</h4>
-                           <div class="form-group" style="padding:14px;">
-                            <textarea class="form-control" placeholder="{{ "placeholder.new_post" | trans({}, 'home') }}"></textarea>
-                          </div>
-                          <input type="submit" class="btn btn-primary pull-right" value="Envoyer" />
-                          <ul class="list-inline">
-                            <li><i class="glyphicon glyphicon-camera"></i></li>
-                          </ul>
-                      </form>
-                    </div>
-                </form>
+                  <div class="well"> 
+                     <form id="upload" action="{{ path('ath_main_add_post') }}" class="form-horizontal" role="form" {{ form_enctype(form) }} method="POST">
+                        <h4>{{ "new_post" | trans({}, 'home') }}</h4>
+                         <div class="form-group" style="padding:14px;">
+                          {{ form_widget(form.contenu) }}
+                        <ul class="list-inline">
+                          <li>{{ form_widget(form.file) }}</li>
+                        </ul>
+
+        
+                        <input type="submit" class="btn btn-primary pull-right" value="{{ "btn.send" | trans({}, 'home') }}" />
+                        {{ form_rest(form)}}
+                        </div>
+                    </form>
+                  </div>
               </div>
             </div>
             <div class="row">
@@ -89,8 +90,10 @@
                        <div class="panel-heading">
                         <span class="pull-right">
                           {{ onePost.createdAt |localizeddate('short', "none")}}
-                        </span> 
-                        <img class="" src="{{ onePost.createdBy.webPath | imagine_filter('mini') }}" alt="{{ onePost.createdBy }}" title="{{ onePost.createdBy }}" />
+                        </span>
+                        <a href="{{ path('ath_user_show_profile',{'slug': onePost.createdBy.slug }) }}">
+                            <img class="" src="{{ onePost.createdBy.webPath | imagine_filter('mini') }}" alt="{{ onePost.createdBy }}" title="{{ onePost.createdBy }}" />
+                        </a>
                       </div>
                        {% if onePost.filePosts| length > 0 %}
                           <div class="panel-body">
