--- a/app/Resources/views/Ath/Mail/mail_validation_demande_celebrite_for_valideur.html.twig
+++ b/app/Resources/views/Ath/Mail/mail_validation_demande_celebrite_for_valideur.html.twig
@@ -18,8 +18,12 @@
                         <p>La demande de célébrité n°{{ demandeCelebrite.id }} a été validé par {{ demandeCelebrite.updatedBy }}.</p>  
                     {% endif %}              
                     <br>
-                    {% set url = "http://" ~ app.request.server.get('SERVER_NAME') ~ path ('admin_ath_main_demandecelebrite_list') %}
-
+                    
+                    {% if app.environment == 'dev' %}
+                        {% set url = "http://" ~ app.request.server.get('SERVER_NAME') ~ path ('admin_ath_main_demandecelebrite_list') %}
+                    {% else %}
+                        {% set url = "https://" ~ app.request.server.get('SERVER_NAME') ~ path ('admin_ath_main_demandecelebrite_list') %}
+                    {% endif %}
                     <p> Voir la liste des demandes de célébrité <a href="{{ url }}">Athleteec</a> </p>
                 </td>
             </tr>
