--- a/web/sass/front/theme/style.scss
+++ b/web/sass/front/theme/style.scss
@@ -10,7 +10,7 @@ a,a:hover,
 a:active,
 a:focus{
 	text-decoration: none;
-	color:white;
+	// color:white;
 }
 #map {
 	width: 100%;
@@ -934,7 +934,7 @@ input[type="checkbox"]:checked + label span {
 	color:#0084ff;
 }
 .happy_like{
-	color:white;
+	// color:white;
 }
 .happy_item .h_com,
 .happy_full .h_com  {
